fix(Platform): show collapsible content on tablets screen width and higher

--- a/src/components/Platform/Platform.css
+++ b/src/components/Platform/Platform.css
@@ -94,7 +94,7 @@
     }
 
     & .collapsible__content {
-      @media (--desktop-viewport) {
+      @media (--tablet-viewport) {
         display: block;
       }
     }
